[package]
name = "rust_load_tester"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
chrono = "0.4"
csv = "1.1"
clap = { version = "3.2", features = ["derive"] }
futures = "0.3"
hdrhistogram = "7.5"
urlencoding = "2.1.3"
